--- a/1. 디자인 패턴과 프로그래밍 패러다임(2)/디자인 패턴과 프로그래밍 패러다임(2)_최지원.md
+++ b/1. 디자인 패턴과 프로그래밍 패러다임(2)/디자인 패턴과 프로그래밍 패러다임(2)_최지원.md
@@ -61,7 +61,8 @@ public:
 - View와 Model을 이어줄 Controller 객체입니다. 이 객체 내부에는 Model에서 학점 데이터를 받아 이를 모두 더해 View 객체로 전달하는 간단한 알고리즘과 Model의 학점 데이터를 추가하는 메소드가 담겨져 있습니다.
 #### MVC 패턴의 장단점
 1. 장점
-- 
+- View, Model, Controller로 나뉘어져 있으므로 각각의 구성요소에 대해 집중적으로 개발할 수 있고, 동시에 개발 가능하므로 개발 속도가 빠릅니다.
+- 각각의 구성요소가 서로 의존하지 않게 되므로 결합도를 낮출 수 있게 된다 (low coupling)
 2. 단점
 - 
 ## 1.1.9 MVP 패턴
