Update 디자인 패턴과 프로그래밍 패러다임(2)_최지원.md

--- a/1. 디자인 패턴과 프로그래밍 패러다임(2)/디자인 패턴과 프로그래밍 패러다임(2)_최지원.md
+++ b/1. 디자인 패턴과 프로그래밍 패러다임(2)/디자인 패턴과 프로그래밍 패러다임(2)_최지원.md
@@ -1,3 +1,4 @@
+# 1.1 디자인 패턴
 ## 1.1.8 MVC 패턴
 #### MVC 패턴이란
 - 한 애플리케이션을 Model, View, Controller의 세 가지 구성 요소로 구분하는 디자인 패턴을 MVC 패턴이라고 합니다.
@@ -62,17 +63,56 @@ public:
 #### MVC 패턴의 장단점
 1. 장점
 - View, Model, Controller로 나뉘어져 있으므로 각각의 구성요소에 대해 집중적으로 개발할 수 있고, 동시에 개발 가능하므로 개발 속도가 빠릅니다.
-- 각각의 구성요소가 서로 의존하지 않게 되므로 결합도를 낮출 수 있게 된다 (low coupling)
+- 각각의 구성요소가 서로 덜 의존하게 됨으로 결합도를 낮출 수 있게 됩니다. [(loose coupling)](https://www.leafcats.com/68)
 2. 단점
-- 
+- 애플리케이션이 커지고 이에대한 기능이 추가됨에 따라 많은 수의 View와 Model이 얽히게 되어 구조를 파악하기 어려워지게되고 View와 Model사이의 의존성 또한 점점 높아지게 됩니다.
+
+
+
+
 ## 1.1.9 MVP 패턴
+#### MVP 패턴이란
+- MVP 패턴은 MVC 패턴으로부터 파생되었으며 MVC 패턴에서의 Controller가 Presenter로 교체된 패턴입니다.
+- Controller가 여러개의 View와 연결할 수 있는 MVC 패턴과 다르게 MVP 패턴은 View와 Presenter가 일대일 관계에 있다는 점 입니다.
+#### MVP 패턴의 장단점
+1. 장점
+- 기존의 MVC 패턴이 가진 단점이였던 View와 Model사이의 높은 의존성을 해결하였습니다.
+2. 단점
+- View와 Presenter가 일대일 관계에 있어 이 둘 사이의 의존성이 높습니다.
+
+
+
 
 ## 1.1.10 MVVM 패턴
+#### MVVM 패턴이란
+- NVVM 패턴 역시 MVC 패턴으로부터 파생되었으며 MVC 패턴에서의 Controller가 View Model로 바뀐 패턴입니다.
+- Command 패턴과 data binding을 이용하여 View와 View model사이의 의존성을 없앴습니다.
+#### MVVM 패턴의 장단점
+1. 장점
+- MVC 패턴이 View와 Model사이의 의존성이 높았고 MVP 패턴이 View와 Presenter사이의 의존성이 높았지만 MVVM은 Model, View, Viw Model간의 의존성이 없습니다.
+2. 단점
+- 간단한 애플리케이션에서 오히려 더 설계에 어려움이 있을 수 있습니다. 이는 View Model을 설계하는것이 쉽지 않기 때문입니다. 
+- 애플리케이션이 복잡해질수록 View Model이 비대해진다는 단점이 있습니다.
 
+
+# 1.2 프로그래밍 패러다임
 ## 1.2.1 선언형과 함수형 프로그래밍
+- 프로그래밍은 크게 선언형 프로그래밍과 명령형 프로그래밍으로 나누어집니다. 선언형 프로그래밍은 다시 함수형 프로그래밍이라는 하위 집합을 가지고 있습니다. 즉, 선언형 프로그래밍의 일종으로 함수형 프로그래밍이 있다 라고 말할수 있는 것 입니다. 
+
+
+
 
 ## 1.2.2 객체지향 프로그래밍
 
+
+
+
 ## 1.2.3 절차형 프로그래밍
 
+
+
+
 ## 1.2.4 패러다임의 혼합
+
+
+
